--- a/action.yml
+++ b/action.yml
@@ -176,10 +176,11 @@ runs:
     # Download the Bridge tool and extract it
     - if: steps.cache-bridge-tools.outputs.cache-hit != 'true'
       run: |
-        mkdir -p ${{inputs.bridge_install_folder}}
+        mkdir -m 777 -p ${{inputs.bridge_install_folder}}
         cd ${{inputs.bridge_install_folder}}
         wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
         unzip -j -o synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip -d ${{inputs.bridge_install_folder}} && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
+        ls -la
       shell: bash
 
     #---------Coverity on Polaris------------------------#
@@ -231,7 +232,7 @@ runs:
         github_token: ${{ inputs.github_token }}
         blackduck_automation_fixpr: false
         blackduck_scan_failure_severities: "NONE"
-        synopsys_bridge_path: '/tmp'
+        synopsys_bridge_path: ${{inputs.bridge_install_folder}}
         bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
