--- a/action.yml
+++ b/action.yml
@@ -180,7 +180,8 @@ runs:
         cd ${{inputs.bridge_install_folder}}
         wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
         unzip -j -o synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip -d ${{inputs.bridge_install_folder}} && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-        ${{inputs.bridge_install_folder}}/synopsys-bridge --stage blackduck --state /tmp/synopsys-actionHcn6sq/bd_input.json
+        if [ ${{inputs.blackduck == 'true'}} ]; then ${{inputs.bridge_install_folder}}/synopsys-bridge --stage blackduck --state  ${{inputs.bridge_install_folder}}/bd_input.json; fi
+        if [ ${{inputs.cnc == 'true'}} ]; then ${{inputs.bridge_install_folder}}/synopsys-bridge --stage connect --state  ${{inputs.bridge_install_folder}}/coverity_input.json; fi
         ls -la
       shell: bash
 
