--- a/action.yml
+++ b/action.yml
@@ -180,8 +180,6 @@ runs:
         cd ${{inputs.bridge_install_folder}}
         wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
         unzip -j -o synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip -d ${{inputs.bridge_install_folder}} && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-        if [ ${{inputs.blackduck == 'true'}} ]; then ${{inputs.bridge_install_folder}}/synopsys-bridge --stage blackduck --state  ${{inputs.bridge_install_folder}}/bd_input.json; fi
-        if [ ${{inputs.cnc == 'true'}} ]; then ${{inputs.bridge_install_folder}}/synopsys-bridge --stage connect --state  ${{inputs.bridge_install_folder}}/coverity_input.json; fi
         ls -la
       shell: bash
 
@@ -235,7 +233,7 @@ runs:
         blackduck_automation_fixpr: false
         blackduck_scan_failure_severities: "NONE"
         synopsys_bridge_path: ${{inputs.bridge_install_folder}}
-        bridge_download_version: ${{inputs.bridge_version}}
+        # bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
