--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ inputs:
     required: false
   bridge_install_folder:
     description: "Install folder for Bridge component"
-    default: "/tmp/synopsys-bridge"
+    default:  $HOME/synopsys-bridge
     required: false
   bridge_platform:
     description: "Bridge platform linux is default. Options are linux64, win64 and macosx"
@@ -179,9 +179,9 @@ runs:
         mkdir -m 777 -p ${{inputs.bridge_install_folder}}
         cd ${{inputs.bridge_install_folder}}
         wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-        unzip -j -o synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip -d ${{inputs.bridge_install_folder}} && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
         ls -la
       shell: bash
+        # unzip -j -o synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip -d ${{inputs.bridge_install_folder}}  && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
 
     #---------Coverity on Polaris------------------------#
     - if: ${{inputs.polaris == 'true'}}
@@ -233,7 +233,8 @@ runs:
         blackduck_automation_fixpr: false
         blackduck_scan_failure_severities: "NONE"
         synopsys_bridge_path: ${{inputs.bridge_install_folder}}
-        # bridge_download_version: ${{inputs.bridge_version}}
+        bridge_download_version: ${{inputs.bridge_version}}
+        bridge_download_url: ${{inputs.bridge_install_folder}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
