Updated to use the newest version of synospsys-action

--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,10 @@ inputs:
     description: "Bridge component version"
     default: "1.1.0"
     required: false
+  synopsys_action_version:
+    description: "Official Synopsys Action version"
+    default: "v1.5.0"
+    required: false
   #------------Polaris related inputs------------------------#
   polaris_project:
     description: Project name, if not given then default=github.repository
@@ -257,7 +261,7 @@ runs:
     #------------Black Duck ------------------------#
     - if: ${{inputs.blackduck == 'true'}}
       name: Black Duck Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.4.1
+      uses: synopsys-sig/synopsys-action@${{inputs.synopsys_action_version}}
       with:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
@@ -317,7 +321,7 @@ runs:
     #------------Cloud Native Coverity Analysis------------------------#
     - if: ${{inputs.cnc == 'true'}}
       name: CNC Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.4.1
+      uses: synopsys-sig/synopsys-action@${{inputs.synopsys_action_version}}
       with:
         coverity_url: ${{ inputs.cnc_url }}
         coverity_user: ${{ inputs.cnc_username }}
@@ -353,7 +357,7 @@ runs:
     #------------Nextgen Polaris ------------------------#
     - if: ${{inputs.polaris_nextgen == 'true'}}
       name: Nextgen Polaris Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.4.1
+      uses: synopsys-sig/synopsys-action@${{inputs.synopsys_action_version}}
       with:
           polaris_serverUrl: ${{ inputs.polaris_nextgen_url }}
           polaris_accessToken: ${{ inputs.polaris_nextgen_token  }}
