--- a/action.yml
+++ b/action.yml
@@ -228,20 +228,20 @@ runs:
   using: composite
   steps:
     #---------Cache Bridge tool--------------------------#
-    - if: ${{ inputs.cache == 'true'}}
-      id: cache-bridge-tools
-      uses: actions/cache@v3
-      with:
-        path: ${{inputs.bridge_install_folder}}
-        key: cache-bridge-tools-${{ inputs.bridge_platform }}-${{ inputs.bridge_version }}
-    # Download the Bridge tool and extract it
-    - if: steps.cache-bridge-tools.outputs.cache-hit != 'true'
-      run: |
-        mkdir -m 777 -p ${{inputs.bridge_install_folder}}
-        cd ${{inputs.bridge_install_folder}}
-        wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-        unzip -o -q ${{inputs.bridge_install_folder}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-      shell: bash
+    # - if: ${{ inputs.cache == 'true'}}
+    #   id: cache-bridge-tools
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ${{inputs.bridge_install_folder}}
+    #     key: cache-bridge-tools-${{ inputs.bridge_platform }}-${{ inputs.bridge_version }}
+    # # Download the Bridge tool and extract it
+    # - if: steps.cache-bridge-tools.outputs.cache-hit != 'true'
+    #   run: |
+    #     mkdir -m 777 -p ${{inputs.bridge_install_folder}}
+    #     cd ${{inputs.bridge_install_folder}}
+    #     wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
+    #     unzip -o -q ${{inputs.bridge_install_folder}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
+    #   shell: bash
 
     #---------Coverity on Polaris------------------------#
     - if: ${{inputs.polaris == 'true'}}
@@ -292,8 +292,8 @@ runs:
         blackduck_scan_full: true
         github_token: ${{ inputs.github_token }} # Mandatory when blackduck_automation_prcomment is set to 'true'
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-        synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        synopsys_bridge_download_version: ${{inputs.bridge_version}}
+        # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+        # synopsys_bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
@@ -330,8 +330,8 @@ runs:
         blackduck_fixpr_useUpgradeGuidance: ${{ inputs.blackduck_fixpr_useUpgradeGuidance }}
         blackduck_prComment_enabled: ${{ inputs.blackduck_prComment_enabled }}
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-        synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        synopsys_bridge_download_version: ${{inputs.bridge_version}}
+        # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+        # synopsys_bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: feature
@@ -362,8 +362,8 @@ runs:
         blackduck_url: ${{ inputs.blackduck_url }}
         blackduck_scan_full: false
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-        synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        synopsys_bridge_download_version: ${{inputs.bridge_version}}
+        # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+        # synopsys_bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
