--- a/action.yml
+++ b/action.yml
@@ -360,7 +360,7 @@ runs:
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
     - if: ${{inputs.blackduck == 'true' && github.event_name != 'pull_request'}}
       name: Black Duck Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.4.1
+      uses: 'synopsys-sig/synopsys-action@v1.4.1'
       with:
         blackduck_token: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
