--- a/action.yml
+++ b/action.yml
@@ -228,20 +228,20 @@ runs:
   using: composite
   steps:
     #---------Cache Bridge tool--------------------------#
-    # - if: ${{ inputs.cache == 'true'}}
-    #   id: cache-bridge-tools
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: ${{inputs.bridge_install_folder}}
-    #     key: cache-bridge-tools-${{ inputs.bridge_platform }}-${{ inputs.bridge_version }}
-    # # Download the Bridge tool and extract it
-    # - if: steps.cache-bridge-tools.outputs.cache-hit != 'true'
-    #   run: |
-    #     mkdir -m 777 -p ${{inputs.bridge_install_folder}}
-    #     cd ${{inputs.bridge_install_folder}}
-    #     wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-    #     unzip -o -q ${{inputs.bridge_install_folder}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
-    #   shell: bash
+    - if: ${{ inputs.cache == 'true'}}
+      id: cache-bridge-tools
+      uses: actions/cache@v3
+      with:
+        path: ${{inputs.bridge_install_folder}}
+        key: cache-bridge-tools-${{ inputs.bridge_platform }}-${{ inputs.bridge_version }}
+    # Download the Bridge tool and extract it
+    - if: steps.cache-bridge-tools.outputs.cache-hit != 'true'
+      run: |
+        mkdir -m 777 -p ${{inputs.bridge_install_folder}}
+        cd ${{inputs.bridge_install_folder}}
+        wget -q https://sig-repo.synopsys.com/artifactory/bds-integrations-release/com/synopsys/integration/synopsys-bridge/${{inputs.bridge_version}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
+        unzip -o -q ${{inputs.bridge_install_folder}}/synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip && rm -rf synopsys-bridge-${{inputs.bridge_version}}-${{inputs.bridge_platform}}.zip
+      shell: bash
 
     #---------Coverity on Polaris------------------------#
     - if: ${{inputs.polaris == 'true'}}
@@ -285,7 +285,7 @@ runs:
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
     - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true'}}
       name: Black Duck Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.7.0
+      uses: synopsys-sig/synopsys-action@v1.8.0
       with:
         blackduck_token: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
@@ -320,7 +320,7 @@ runs:
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
     # - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && github.event.action != 'closed'}}
     #   name: Black Duck Analysis with synopsys-action
-    #   uses: synopsys-sig/synopsys-action@v1.7.0
+    #   uses: synopsys-sig/synopsys-action@v1.8.0
     #   with:
     #     blackduck_token: ${{ inputs.blackduck_token }}
     #     blackduck_url: ${{ inputs.blackduck_url }}
@@ -360,7 +360,7 @@ runs:
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
     - if: ${{inputs.blackduck == 'true' && github.event_name != 'pull_request'}}
       name: Black Duck Analysis with synopsys-action
-      uses: 'synopsys-sig/synopsys-action@v1.4.1'
+      uses: synopsys-sig/synopsys-action@v1.8.0
       with:
         blackduck_token: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
@@ -423,7 +423,7 @@ runs:
     #------------Cloud Native Coverity Analysis------------------------#
     - if: ${{inputs.cnc == 'true'}}
       name: CNC Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.7.0
+      uses: synopsys-sig/synopsys-action@v1.8.0
       with:
         coverity_url: ${{ inputs.cnc_url }}
         coverity_user: ${{ inputs.cnc_username }}
@@ -459,7 +459,7 @@ runs:
     #------------Nextgen Polaris ------------------------#
     - if: ${{inputs.polaris_nextgen == 'true'}}
       name: Nextgen Polaris Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.7.0
+      uses: synopsys-sig/synopsys-action@v1.8.0
       with:
           polaris_serverUrl: ${{ inputs.polaris_nextgen_url }}
           polaris_accessToken: ${{ inputs.polaris_nextgen_token  }}
