--- a/action.yml
+++ b/action.yml
@@ -292,15 +292,13 @@ runs:
         blackduck_scan_full: true
         github_token: ${{ inputs.github_token }} # Mandatory when blackduck_automation_prcomment is set to 'true'
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-        # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        # synopsys_bridge_download_version: ${{inputs.bridge_version}}
+        synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+        synopsys_bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-        DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-        DETECT_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-        DETECT_BDIO_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
+        DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/.bridge # This needs to be set, because of RAPID scan results
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
@@ -332,15 +330,13 @@ runs:
     #     blackduck_fixpr_useUpgradeGuidance: ${{ inputs.blackduck_fixpr_useUpgradeGuidance }}
     #     blackduck_prComment_enabled: ${{ inputs.blackduck_prComment_enabled }}
     #     blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-    #     # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-    #     # synopsys_bridge_download_version: ${{inputs.bridge_version}}
+    #     synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+    #     synopsys_bridge_download_version: ${{inputs.bridge_version}}
     #   env:
     #     DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
     #     DETECT_PROJECT_VERSION_NAME: feature
     #     DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-    #     DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-    #     DETECT_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-    #     DETECT_BDIO_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
+    #     DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/.bridge # This needs to be set, because of RAPID scan results
     #     DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
     #     DETECT_TIMEOUT: "7200"
     #     DETECT_DETECTOR_SEARCH_DEPTH: "20"
@@ -366,15 +362,13 @@ runs:
         blackduck_url: ${{ inputs.blackduck_url }}
         blackduck_scan_full: false
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
-        # synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        # synopsys_bridge_download_version: ${{inputs.bridge_version}}
+        synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
+        synopsys_bridge_download_version: ${{inputs.bridge_version}}
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-        DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-        DETECT_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
-        DETECT_BDIO_OUTPUT_PATH: ${{github.workspace}}/bd_scan # This needs to be set, because of RAPID scan results
+        DETECT_SCAN_OUTPUT_PATH: ${{github.workspace}}/.bridge # This needs to be set, because of RAPID scan results
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
@@ -400,7 +394,7 @@ runs:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_scan_full: ${{ inputs.blackduck_full_scan }}
         blackduck_outputFile: ${{github.workspace}}/blackduck-sarif.json
-        blackduck_scanOutputPath: ${{github.workspace}}/bd_scan
+        blackduck_scanOutputPath: ${{github.workspace}}/.bridge
         blackduck_policies: ${{ inputs.blackduck_policies }}
         blackduck_iac: ${{ inputs.blackduck_iac }}
         blackduck_log_level: ${{ inputs.log_level }}
@@ -433,7 +427,7 @@ runs:
         coverity_repository_name: ${{ inputs.cnc_repository_name }}
         coverity_branch_name: ${{ inputs.cnc_branche_name }}
         synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-        bridge_download_version: ${{inputs.bridge_version}}
+        synopsys_bridge_download_version: ${{inputs.bridge_version}}
     - if: ${{inputs.cnc == 'true' && inputs.cnc_sarif == 'true'}}
       uses: lejouni/cnc-sarif-formatter@main
       with:
@@ -468,4 +462,4 @@ runs:
           ### Accepts Multiple Values
           polaris_assessment_types: "SAST,SCA"
           synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
-          bridge_download_version: ${{inputs.bridge_version}}
+          synopsys_bridge_download_version: ${{inputs.bridge_version}}
