--- a/action.yml
+++ b/action.yml
@@ -400,13 +400,13 @@ runs:
         blackduck_log_level: ${{ inputs.log_level }}
         blackduck_policy_categories: ${{ inputs.blackduck_policy_categories }}
 
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true'}}
       name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: blackduck-sarif.json
       continue-on-error: true
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true'}}
       name: Archive scanning results
       uses: actions/upload-artifact@v3
       with:
@@ -414,6 +414,19 @@ runs:
         path: blackduck-sarif.json
       continue-on-error: true
 
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name != 'pull_request'}}
+      name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: blackduck-sarif.json
+      continue-on-error: true
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name != 'pull_request'}}
+      name: Archive scanning results
+      uses: actions/upload-artifact@v3
+      with:
+        name: bd-scan-results
+        path: blackduck-sarif.json
+      continue-on-error: true
     #------------Cloud Native Coverity Analysis------------------------#
     - if: ${{inputs.cnc == 'true'}}
       name: CNC Analysis with synopsys-action
